- Fix Bug #32223 weird behaviour of pg_last_notice

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@200155 c90b9560-bf6c-de11-be94-00142212c4b1